Change some projects text

--- a/app/partials/i18n/_en.html
+++ b/app/partials/i18n/_en.html
@@ -1,4 +1,6 @@
 {# Header & Footer #}
+{% set langCode = "en" %}
+{% set pageDesc = "I'm keen on Data science, Game development and Web" %}
 {% set oleg = "Oleg" %}
 {% set morozenkov = "Morozenkov" %}
 {% set giraffeNotice = "Open this page on desktop to see giraffe with cool parallax effect" %}
@@ -40,7 +42,7 @@
 {% set tgbotCpp = "tgbot-cpp" %}
 {% set tgbotCppDesc = "C++ library for Telegram bot API" %}
 {% set vkChannelify = "VK Channelify" %}
-{% set vkChannelifyDesc = "Create Telegram channel from VK group" %}
+{% set vkChannelifyDesc = "Repost posts from VK group to Telegram channel" %}
 
 {# Portfolio controls #}
 {% set myPortfolio = "My portfolio" %}
