--- a/app/partials/i18n/_ru.html
+++ b/app/partials/i18n/_ru.html
@@ -1,4 +1,6 @@
 {# Header & Footer #}
+{% set langCode = "ru" %}
+{% set pageDesc = "Шарю в Анализе данных, Геймдеве и Вебе" %}
 {% set oleg = "Олег" %}
 {% set morozenkov = "Морозенков" %}
 {% set giraffeNotice = "С компьютера жирафик будет с параллаксом" %}
@@ -18,9 +20,9 @@
 
 {# Portfolio #}
 {% set voiceToVector = "Voice to vector" %}
-{% set voiceToVectorDesc = "Преобразование голоса в вектор" %}
+{% set voiceToVectorDesc = "Сравнивает голоса" %}
 {% set face3dMatch = "Face3dMatch" %}
-{% set face3dMatchDesc = "Авторизация по 3d модели лица" %}
+{% set face3dMatchDesc = "Авторизирует по 3d модели лица" %}
 {% set gotohack2 = "GoToHack2 + MTS" %}
 {% set gotohack2Desc = "Кейс от МТС: предсказывание лайков, репостов и лайков от репостов в группе TalentEdme" %}
 {% set movieRecommend = "Movie recommender system" %}
@@ -40,7 +42,7 @@
 {% set tgbotCpp = "tgbot-cpp" %}
 {% set tgbotCppDesc = "C++ библиотека для Telegram bot API" %}
 {% set vkChannelify = "VK Channelify" %}
-{% set vkChannelifyDesc = "Создает Телеграмм канал группы ВК" %}
+{% set vkChannelifyDesc = "Пересылает новости из группы ВК в Телеграмм канал" %}
 
 {# Portfolio controls #}
 {% set myPortfolio = "Портфолио" %}
