Update portfolio. More russian

--- a/app/partials/_contacts.html
+++ b/app/partials/_contacts.html
@@ -1,23 +1,23 @@
 <ul class="contacts-links">
   <li class="contacts-links__item contacts-links__item--github">
     <img class="contacts-links__icon" src="images/icons/github.png" alt="GitHub">
-    <a class="contacts-links__link contacts-links__link--github" target="_blank" href="https://github.com/reo7sp">GitHub</a>
+    <a class="contacts-links__link contacts-links__link--github" target="_blank" href="https://github.com/reo7sp">{{ i18n.githubContact }}</a>
   </li>
   <li class="contacts-links__item">
     <img class="contacts-links__icon" src="images/icons/telegram.png" alt="Telegram">
-    <a class="contacts-links__link" target="_blank" href="https://t.me/reo7sp">Telegram</a>
+    <a class="contacts-links__link" target="_blank" href="https://t.me/reo7sp">{{ i18n.telegramContact }}</a>
   </li>
   <li class="contacts-links__item">
     <img class="contacts-links__icon" src="images/icons/skype.png" alt="Skype">
-    <a class="contacts-links__link" target="_blank" href="skype:reo_sp?add">Skype</a>
+    <a class="contacts-links__link" target="_blank" href="skype:reo_sp?add">{{ i18n.skypeContact }}</a>
   </li>
   <li class="contacts-links__item">
     <img class="contacts-links__icon" src="images/icons/vk.png" alt="VK">
-    <a class="contacts-links__link" target="_blank" href="https://vk.com/reo7sp">VK</a>
+    <a class="contacts-links__link" target="_blank" href="https://vk.com/reo7sp">{{ i18n.vkContact }}</a>
   </li>
   <li class="contacts-links__item">
     <img class="contacts-links__icon" src="images/icons/linkedin.png" alt="LinkedIn">
-    <a class="contacts-links__link" target="_blank" href="https://www.linkedin.com/in/reo7sp">LinkedIn</a>
+    <a class="contacts-links__link" target="_blank" href="https://www.linkedin.com/in/reo7sp">{{ i18n.linkedinContact }}</a>
   </li>
   <li class="contacts-links__item">
     <img class="contacts-links__icon" src="images/icons/mail.png" alt="Email">
