--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -108,10 +108,14 @@
   ) }}
 
   {{ item(
-      i18n.letsNukeThem,
-      [i18n.inDev, i18n.game, i18n.cocos2d, i18n.coffeescript],
-      ['employment', 'game', 'cocos', 'coffee'],
-      i18n.letsNukeThemDesc
+      i18n.recast,
+      [i18n.inDev, i18n.game, i18n.cpp, i18n.unity3d],
+      ['employment', 'game', 'cpp', 'unity'],
+      i18n.recastDesc,
+      'https://github.com/bender-wardrobe/Recast',
+      i18n.serverGithub,
+      'https://github.com/bender-wardrobe/RecastClient',
+      i18n.client
   ) }}
 
   <br>
@@ -123,8 +127,6 @@
       i18n.kanikuDesc,
       'https://github.com/reo7sp/kaniku',
       i18n.github,
-      'https://www.npmjs.com/package/kaniku',
-      i18n.npm,
       'https://github.com/reo7sp/cocos-starter-kit',
       i18n.starterKit
   ) }}
@@ -145,8 +147,8 @@
 
   {{ item(
       i18n.thylogale,
-      [i18n.webApp, i18n.ruby, i18n.rails],
-      ['webapp',  'ruby', 'rails'],
+      [i18n.inDev, i18n.webApp, i18n.ruby, i18n.rails],
+      ['employment', 'webapp',  'ruby', 'rails'],
       i18n.thylogaleDesc,
       'https://github.com/reo7sp/thylogale',
       i18n.github
@@ -168,8 +170,10 @@
       null,
       null,
       null,
-      90
+      100
   ) }}
+
+  <br>
 
   {{ item(
       i18n.vkChannelify,
