--- a/app/partials/i18n/_en.html
+++ b/app/partials/i18n/_en.html
@@ -4,6 +4,14 @@
 {% set oleg = "Oleg" %}
 {% set morozenkov = "Morozenkov" %}
 {% set giraffeNotice = "Open this page on desktop to see giraffe with cool parallax effect" %}
+{% set giraffeHi = "Hi there" %}
+
+{# Contacts #}
+{% set githubContact = "GitHub" %}
+{% set telegramContact = "Telegram" %}
+{% set skypeContact = "Skype" %}
+{% set vkContact = "VK" %}
+{% set linkedinContact = "LinkedIn" %}
 
 {# Education #}
 {% set education = "Education" %}
@@ -43,6 +51,8 @@
 {% set tgbotCppDesc = "C++ library for Telegram bot API" %}
 {% set vkChannelify = "VK Channelify" %}
 {% set vkChannelifyDesc = "Repost posts from VK group to Telegram channel" %}
+{% set recast = "Recast" %}
+{% set recastDesc = "MMORPG game with user-defined magic" %}
 
 {# Portfolio controls #}
 {% set myPortfolio = "My portfolio" %}
@@ -94,6 +104,8 @@
 {% set boostAsio = "boost asio" %}
 {% set telegramApi = "telegram api" %}
 {% set bot = "bot" %}
+{% set serverGithub = "Server GitHub repo" %}
+{% set client = "Client" %}
 {% set seeGitHub = "See my open source projects on GitHub" %}
 {% set byLang = "By language" %}
 {% set up = "up" %}
