--- a/app/partials/i18n/_ru.html
+++ b/app/partials/i18n/_ru.html
@@ -4,6 +4,14 @@
 {% set oleg = "Олег" %}
 {% set morozenkov = "Морозенков" %}
 {% set giraffeNotice = "С компьютера жирафик будет с параллаксом" %}
+{% set giraffeHi = "Приветик" %}
+
+{# Contacts #}
+{% set githubContact = "Гитхаб" %}
+{% set telegramContact = "Телеграм" %}
+{% set skypeContact = "Скайп" %}
+{% set vkContact = "ВК" %}
+{% set linkedinContact = "ЛинкедИн" %}
 
 {# Education #}
 {% set education = "Образование" %}
@@ -16,7 +24,7 @@
 {% set additionalCourses = "Дополнительные курсы" %}
 {% set introToMl = "Введение в машинное обучение" %}
 {% set introToMlSpec = "НИУ ВШЭ" %}
-{% set courseraCertificate = "Сертификат Coursera" %}
+{% set courseraCertificate = "Сертификат Курсеры" %}
 
 {# Portfolio #}
 {% set voiceToVector = "Voice to vector" %}
@@ -43,6 +51,8 @@
 {% set tgbotCppDesc = "C++ библиотека для Telegram bot API" %}
 {% set vkChannelify = "VK Channelify" %}
 {% set vkChannelifyDesc = "Пересылает новости из группы ВК в Телеграмм канал" %}
+{% set recast = "Recast" %}
+{% set recastDesc = "ММОРПГ игра, где игрок сам моделирует заклинания" %}
 
 {# Portfolio controls #}
 {% set myPortfolio = "Портфолио" %}
@@ -52,8 +62,8 @@
 {% set misc = "Misc" %}
 {% set goToGamedev = "к геймдеву" %}
 {% set goToWeb = "к вебу" %}
-{% set github = "GitHub" %}
-{% set slideshare = "SlideShare" %}
+{% set github = "Гитхаб" %}
+{% set slideshare = "Презентация" %}
 {% set neuralNetworks = "нейросети" %}
 {% set voiceProcessing = "обработка голоса" %}
 {% set python = "python" %}
@@ -74,10 +84,10 @@
 {% set unity3d = "unity3d" %}
 {% set uframe = "uframe" %}
 {% set spine = "spine" %}
-{% set youTube = "YouTube" %}
+{% set youTube = "Ютюб" %}
 {% set freelance = "фриланс" %}
 {% set steamGreenlight = "steam greenlight" %}
-{% set vk = "VK" %}
+{% set vk = "ВК" %}
 {% set inDev = "в разработке" %}
 {% set cocos2d = "cocos2d-x" %}
 {% set coffeescript = "coffeescript" %}
@@ -94,6 +104,8 @@
 {% set boostAsio = "boost asio" %}
 {% set telegramApi = "telegram api" %}
 {% set bot = "бот" %}
+{% set serverGithub = "Гитхаб сервера" %}
+{% set client = "Клиент" %}
 {% set seeGitHub = "Посмотреть опенсорс на Гитхабе" %}
 {% set byLang = "По языкам" %}
 {% set up = "наверх" %}
