--- a/app/styles/contacts-links.sass
+++ b/app/styles/contacts-links.sass
@@ -7,7 +7,7 @@
 
     &--github
       margin-bottom: 14px
-      font-size: 20px
+      font-size: 22px
       font-weight: 700
 
   &__icon
@@ -20,4 +20,5 @@
 
     &--github
       vertical-align: text-top
-      line-height: 15px
+      line-height: 16px
+      margin-left: -2px
