--- a/app/partials/_index.html
+++ b/app/partials/_index.html
@@ -16,7 +16,15 @@
   </section>
 
   <section class="section-with-margin">
+    {% include 'partials/_employment.html' %}
+  </section>
+
+  <section class="section-with-margin">
     {% include 'partials/_education.html' %}
+  </section>
+
+  <section class="section-with-margin">
+    {% include 'partials/_courses.html' %}
   </section>
 
   <section class="section-with-margin">
