--- a/app/partials/i18n/_en.html
+++ b/app/partials/i18n/_en.html
@@ -13,6 +13,13 @@
 {% set vkContact = "VK" %}
 {% set linkedinContact = "LinkedIn" %}
 
+{# Employment #}
+{% set employment = "Employment" %}
+{% set site = "Site" %}
+{% set july = "July" %}
+{% set now = "now" %}
+{% set kts = "KTS Studio" %}
+
 {# Education #}
 {% set education = "Education" %}
 {% set bauman = "Bauman Moscow State Technical University" %}
@@ -55,7 +62,7 @@
 {% set recastDesc = "MMORPG game with user-defined magic" %}
 
 {# Portfolio controls #}
-{% set myPortfolio = "My portfolio" %}
+{% set myPortfolio = "Portfolio" %}
 {% set dataScience = "Data Science" %}
 {% set gamedev = "Gamedev" %}
 {% set web = "Web" %}
