--- a/app/partials/i18n/_ru.html
+++ b/app/partials/i18n/_ru.html
@@ -13,6 +13,13 @@
 {% set vkContact = "ВК" %}
 {% set linkedinContact = "ЛинкедИн" %}
 
+{# Employment #}
+{% set employment = "Работа" %}
+{% set site = "Сайт" %}
+{% set july = "Июль" %}
+{% set now = "текущее время" %}
+{% set kts = "Студия KTS" %}
+
 {# Education #}
 {% set education = "Образование" %}
 {% set bauman = "МГТУ им. Н.Э. Баумана" %}
