--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -5,6 +5,7 @@
 @import "contacts-links"
 @import "giraffe-background"
 @import "education"
+@import "employment"
 @import "work"
 @import "github-footer"
 @import "printable-links"
