--- a/app/partials/_index.html
+++ b/app/partials/_index.html
@@ -8,7 +8,7 @@
   <header>
     <a href="https://reo7sp.ru" no-printable-links class="header-site-link">reo7sp.ru</a>
     <h1>{{ i18n.oleg }}<span class="break-on-mobile"> </span>{{ i18n.morozenkov }}</h1>
-    <p>@<b>reo7sp</b> <span class="language-switcher"><a href="/" no-printable-links>English</a> | <a href="/index-ru.html" no-printable-links>Русский</a></span></p>
+    <p>@<b>reo7sp</b> <span class="language-switcher"><a href="/" no-printable-links>English</a> | <a href="/ru.html" no-printable-links>Русский</a></span></p>
   </header>
 
   <section class="section-with-margin">
