Fix header pdf link

--- a/app/partials/_index.html
+++ b/app/partials/_index.html
@@ -6,7 +6,7 @@
 
 <div class="container">
   <header>
-    <a href="https://reo7sp.ru" no-printable-links class="header-site-link">reo7sp.ru</a>
+    <a href="https://oleg.rocks" no-printable-links class="header-site-link">oleg.rocks</a>
     <h1>{{ i18n.oleg }}<span class="break-on-mobile"> </span>{{ i18n.morozenkov }}</h1>
     <p>@<b>reo7sp</b> <span class="language-switcher"><a href="/" no-printable-links>English</a> | <a href="/ru.html" no-printable-links>Русский</a></span></p>
   </header>
