--- a/app/partials/_contacts.html
+++ b/app/partials/_contacts.html
@@ -21,6 +21,6 @@
   </li>
   <li class="contacts-links__item">
     <img class="contacts-links__icon" src="images/icons/mail.png" alt="Email">
-    <a class="contacts-links__link" target="_blank" href="&#109;&#097;&#105;&#108;&#116;&#111;:&#097;&#064;&#114;&#101;&#111;&#055;&#115;&#112;&#046;&#114;&#117;">&#097;&#064;&#114;&#101;&#111;&#055;&#115;&#112;&#046;&#114;&#117;</a>
+    <a class="contacts-links__link" target="_blank" href="&#109;&#097;&#105;&#108;&#116;&#111;:&#109;&#064;&#111;&#108;&#101;&#103;&#046;&#114;&#111;&#099;&#107;&#115;">&#109;&#064;&#111;&#108;&#101;&#103;&#046;&#114;&#111;&#099;&#107;&#115;</a>
   </li>
 </ul>
