Fix printable links

--- a/src/index-common.ejs
+++ b/src/index-common.ejs
@@ -20,7 +20,7 @@
 
 <div id="giraffe-hi-text" class="hidden"><%= i18n.giraffeHi %></div>
 
-<% include blocks/yandex-metrica/index.ejs %>
+<%- include('blocks/yandex-metrica/index.ejs') %>
 
 </body>
 </html>
