--- a/src/blocks/employment/index.ejs
+++ b/src/blocks/employment/index.ejs
@@ -6,7 +6,7 @@
             <div class="employment-item__header">
                 <img class="employment-item__logo" src="images/employment/kts.png">
                 <p class="employment-item__title">
-                    <strong><%= i18n.kts %></strong>
+                    <strong><%= i18n.ktsStudio %></strong>
                     <a class="employment-item__link" href="http://ktsstudio.ru"><%= i18n.site %></a>
                 </p>
             </div>
