--- a/src/i18n/en.ejs
+++ b/src/i18n/en.ejs
@@ -2,7 +2,7 @@
 
 <%# Header & Footer %>
 <% i18n.langCode = "en" %>
-<% i18n.pageDesc = "I'm keen on Data science, Game development and Web" %>
+<% i18n.pageDesc = "Yet another data scientist" %>
 <% i18n.oleg = "Oleg" %>
 <% i18n.morozenkov = "Morozenkov" %>
 <% i18n.giraffeNotice = "Open this page on desktop to see giraffe with cool parallax effect" %>
@@ -28,7 +28,7 @@
 <% i18n.bauman = "Bauman Moscow State Technical University" %>
 <% i18n.baumanSpec = "2016–2020, Bachelor of Engineering" %>
 <% i18n.technopark = "Technopark Mail.Ru" %>
-<% i18n.technoparkSpec = "2017–2018, Software Architect" %>
+<% i18n.technoparkSpec = "2017–2018, Software Architect, Web, Highload, Java, Spring, C++, Python" %>
 <% i18n.introToMl = "Introduction to machine learning" %>
 <% i18n.introToMlSpec = "University Higher School of Economics" %>
 <% i18n.courseraCertificate = "Coursera certificate" %>
@@ -66,7 +66,7 @@
 <% i18n.dataScience = "Data science" %>
 <% i18n.nonDataScience = "Non data science" %>
 <% i18n.github = "GitHub" %>
-<% i18n.slideshare = "SlideShare" %>
+<% i18n.presentation = "Presentation" %>
 <% i18n.neuralNetworks = "neural networks" %>
 <% i18n.voiceProcessing = "voice processing" %>
 <% i18n.python = "python" %>
@@ -79,7 +79,7 @@
 <% i18n.hackathon = "hackathon" %>
 <% i18n.naturalTextProcessing = "natural text processing" %>
 <% i18n.vkApi = "vk api" %>
-<% i18n.winnerCertificate = "Winner certificate" %>
+<% i18n.winnerCertificate = "Winner&nbsp;certificate" %>
 <% i18n.recommenderSystem = "recommender system" %>
 <% i18n.worked = "worked" %>
 <% i18n.workingSince = "working since" %>
