--- a/src/i18n/ru.ejs
+++ b/src/i18n/ru.ejs
@@ -117,7 +117,7 @@ MLP-пародия на игру Rayman Legends.
 <% i18n.spine = "spine" %>
 <% i18n.youTube = "Ютюб" %>
 <% i18n.freelance = "фриланс" %>
-<% i18n.steam = "Steam" %>
+<% i18n.steam = "Стим" %>
 <% i18n.steamGreenlight = "steam greenlight" %>
 <% i18n.vk = "ВК" %>
 <% i18n.library = "библиотека" %>
