--- a/src/i18n/ru.ejs
+++ b/src/i18n/ru.ejs
@@ -46,7 +46,7 @@
 <% i18n.kts2Desc = `
 Разгрузка техподдержки с помощью чатбота.
 <br>
-Занимался обработкой опечаток, и также применением различных текстовых моделей, таких как например doc2vec.
+Занимался обработкой опечаток и применением различных текстовых моделей, таких как например doc2vec.
 ` %>
 
 <% i18n.ktsLinguistics = "kts_linguistics" %>
@@ -60,12 +60,14 @@
 <% i18n.voiceToVectorDesc = `
 Сравнивание голосов на одинаковость. Преобразование голоса в вектор.
 <br>
-Делали преобразование Фурье для первичной обработки звукового ряда. Использовали триплет из сверточных нейросетей для получения вектора.
+Делали преобразование Фурье для получения спектрограмм. Использовали триплет из сверточных нейросетей для получения вектора.
 ` %>
 
 <% i18n.gotohack2 = "GoToHack2 + MTS" %>
 <% i18n.gotohack2Desc = `
 Кейс от МТС: предсказывание лайков, репостов и лайков от репостов в группе TalentEdme.
+<br>
+Сравнивали содержимое постов и интересов пользователя при помощи LDA.
 ` %>
 
 <% i18n.tgbotCpp = "tgbot-cpp" %>
