--- a/src/blocks/work/index.scss
+++ b/src/blocks/work/index.scss
@@ -26,11 +26,11 @@
 
         &--hidden {
             display: inline-block;
-            content: " ";
             width: 210px;
-            height: 20px;
+            height: 21px;
             margin-bottom: -3px;
             background-color: #333;
+            color: #333;
         }
     }
 
