--- a/src/blocks/education/index.ejs
+++ b/src/blocks/education/index.ejs
@@ -12,7 +12,7 @@
         </li>
         <li class="education-item">
             <p class="education-item__text">
-                <strong><%= i18n.introToMl %></strong> / <%= i18n.introToMlSpec %>
+                <strong><%= i18n.introToMl %></strong> / <%- i18n.introToMlSpec %>
             </p>
             <p class="education-item__additional-text">
                 <a href="https://www.coursera.org/account/accomplishments/certificate/NANEYSFHTVTZ"
