--- a/src/blocks/work/item.ejs
+++ b/src/blocks/work/item.ejs
@@ -1,6 +1,6 @@
 <li class="work__list-elem work-item">
     <% if (title === false) { %>
-    <div class="work-item__title work-item__title--hidden">🁢🁢🁢🁢🁢🁢🁢🁢🁢🁢🁢🁢🁢🁢🁢🁢🁢🁢🁢🁢🁢</div>
+    <div class="work-item__title work-item__title--hidden">*************************</div>
     <% } else { %>
     <div class="work-item__title"><%- title %></div>
     <% } %>
