--- a/src/i18n/ru.ejs
+++ b/src/i18n/ru.ejs
@@ -29,7 +29,7 @@
 <% i18n.technopark = "Технопарк Mail.Ru" %>
 <% i18n.technoparkSpec = "2017–2018, Системный архитектор, Web, Highload, Java, Spring, C++, Python" %>
 <% i18n.introToMl = "Введение в машинное обучение" %>
-<% i18n.introToMlSpec = "НИУ ВШЭ" %>
+<% i18n.introToMlSpec = "НИУ&nbsp;ВШЭ" %>
 <% i18n.courseraCertificate = "Сертификат Курсеры" %>
 
 <%# Portfolio %>
