--- a/src/blocks/work/item.ejs
+++ b/src/blocks/work/item.ejs
@@ -15,16 +15,18 @@
 
     <div class="work-item__links">
         <% for (var i = 0; i < links.length; i++) { %>
-        <a class="work-item__link" target="_blank" href="<%- links[i].url %>"><%- links[i].title %></a>
-        <% if (links[i].stars) { %>
-        <span class="work-item__stat work-item-stat">
-            <svg class="work-item-stat__star" aria-label="stars" height="18" role="img" version="1.1" viewBox="0 -4 14 18" width="14"><path fill-rule="evenodd" d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74z"></path></svg>
-            <% if (links[i].doubleStar) { %>
-            <svg class="work-item-stat__double-star" aria-label="stars" height="18" role="img" version="1.1" viewBox="0 -4 14 18" width="14"><path fill-rule="evenodd" d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74z"></path></svg>
+        <div class="work-item__links-entry">
+            <a class="work-item-link" target="_blank" href="<%- links[i].url %>"><%- links[i].title %></a>
+            <% if (links[i].stars) { %>
+            <span class="work-item-stat">
+                <svg class="work-item-stat__star" aria-label="stars" height="18" role="img" version="1.1" viewBox="0 -4 14 18" width="14"><path fill-rule="evenodd" d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74z"></path></svg>
+                <% if (links[i].doubleStar) { %>
+                <svg class="work-item-stat__double-star" aria-label="stars" height="18" role="img" version="1.1" viewBox="0 -4 14 18" width="14"><path fill-rule="evenodd" d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74z"></path></svg>
+                <% } %>
+                <span class="work-item-stat__count"><%= links[i].stars %>+</span>
+            </span>
             <% } %>
-            <span class="work-item-stat__count"><%= links[i].stars %>+</span>
-        </span>
-        <% } %>
+        </div>
         <% } %>
     </div>
 </li>
