Store presentations locally

--- a/src/blocks/work/index.ejs
+++ b/src/blocks/work/index.ejs
@@ -53,7 +53,7 @@
                 {title: i18n.lasagne, cssClass: 'python'},
             ],
             links: [
-                {title: i18n.presentation, url: 'https://github.com/voice2vec/SpeechLock/blob/master/presentation/Презентация.pdf'},
+                {title: i18n.presentation, url: '/presentations/voice2vec.pdf'},
                 {title: i18n.github, url: 'https://github.com/voice2vec/SpeechLock', stars: 10},
             ]
         }) %>
@@ -67,7 +67,7 @@
                 {title: i18n.vkApi, cssClass: 'vk'},
             ],
             links: [
-                {title: i18n.presentation, url: 'https://github.com/reo7sp/vk-text-likeness/blob/master/Презентация.pdf'},
+                {title: i18n.presentation, url: '/presentations/gotohack2.pdf'},
                 {title: i18n.github, url: 'https://github.com/reo7sp/vk-text-likeness'},
                 {title: i18n.winnerCertificate, url: '/images/certificates/gotohack2-win.jpg'},
             ]
