--- a/src/blocks/employment/index.ejs
+++ b/src/blocks/employment/index.ejs
@@ -7,7 +7,7 @@
                 <img class="employment-item__logo" src="images/employment/kts.png">
                 <p class="employment-item__title">
                     <strong><%= i18n.ktsStudio %></strong>
-                    <a class="employment-item__link" href="http://ktsstudio.ru"><%= i18n.site %></a>
+                    <a class="employment-item__link" href="//ktsstudio.com/projects"><%= i18n.site %></a>
                 </p>
             </div>
             <p class="employment-item__text">Junior Data Scientist</p>
