--- a/src/blocks/work/index.ejs
+++ b/src/blocks/work/index.ejs
@@ -35,6 +35,7 @@
             labels: [
                 {title: i18n.kts, cssClass: 'first'},
                 {title: i18n.openSource, cssClass: 'first'},
+                {title: i18n.library, cssClass: 'second'},
                 {title: i18n.naturalTextProcessing, cssClass: 'third'},
                 {title: i18n.python, cssClass: 'python'},
             ],
@@ -82,6 +83,7 @@
             description: i18n.tgbotCppDesc,
             labels: [
                 {title: i18n.library, cssClass: 'second'},
+                {title: i18n.openSource, cssClass: 'first'},
                 {title: i18n.cpp, cssClass: 'cpp'},
                 {title: i18n.boost, cssClass: 'cpp'},
                 {title: i18n.boostAsio, cssClass: 'cpp'},
@@ -97,6 +99,7 @@
             description: i18n.vkChannelifyDesc,
             labels: [
                 {title: i18n.bot, cssClass: 'second'},
+                {title: i18n.openSource, cssClass: 'first'},
                 {title: i18n.python, cssClass: 'cpp'},
                 {title: i18n.telegramApi, cssClass: 'telegram'},
                 {title: i18n.vkApi, cssClass: 'vk'},
@@ -145,9 +148,9 @@
     </p>
     <p class="github-footer__second">
         <%= i18n.byLang %>:
+        <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=scala">Scala</a><b>,</b>
         <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=java">Java</a><b>,</b>
         <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=c%2B%2B">C++</a><b>,</b>
-        <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=scala">Scala</a><b>,</b>
         <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=go">Go</a><b>,</b>
         <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=jupyter%20notebook">Jupyter&nbsp;Notebook</a>
     </p>
