--- a/src/blocks/work/index.ejs
+++ b/src/blocks/work/index.ejs
@@ -70,7 +70,7 @@
             links: [
                 {title: i18n.presentation, url: '/presentations/gotohack2.pdf'},
                 {title: i18n.github, url: 'https://github.com/reo7sp/vk-text-likeness'},
-                {title: i18n.winnerCertificate, url: '/images/certificates/gotohack2-win.jpg'},
+                {title: i18n.winnerCertificate, url: '/certificates/gotohack2-win.jpg'},
             ]
         }) %>
     </ul>
@@ -91,7 +91,7 @@
             ],
             links: [
                 {title: i18n.github, url: 'https://github.com/reo7sp/tgbot-cpp', stars: 140, doubleStar: true},
-                {title: i18n.documentation, url: 'http://reo7sp.github.io/tgbot-cpp'},
+                {title: i18n.documentation, url: 'https://reo7sp.github.io/tgbot-cpp'},
             ]
         }) %>
         <%- include('item', {
@@ -135,7 +135,7 @@
             ],
             links: [
                 {title: i18n.vk, url: 'https://vk.com/mars_2k'},
-                {title: i18n.steam, url: 'http://steamcommunity.com/sharedfiles/filedetails/?id=729817689'},
+                {title: i18n.steam, url: 'https://steamcommunity.com/sharedfiles/filedetails/?id=729817689'},
             ]
         }) %>
     </ul>
