--- a/src/blocks/work/index.ejs
+++ b/src/blocks/work/index.ejs
@@ -148,10 +148,10 @@
     </p>
     <p class="github-footer__second">
         <%= i18n.byLang %>:
+        <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=jupyter%20notebook">Jupyter&nbsp;Notebook</a><b>,</b>
         <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=scala">Scala</a><b>,</b>
-        <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=java">Java</a><b>,</b>
         <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=c%2B%2B">C++</a><b>,</b>
         <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=go">Go</a><b>,</b>
-        <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=jupyter%20notebook">Jupyter&nbsp;Notebook</a>
+        <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=java">Java</a>
     </p>
 </div>
