Change design of hidden projects names

--- a/src/i18n/ru.ejs
+++ b/src/i18n/ru.ejs
@@ -91,7 +91,7 @@ C++ библиотека для Telegram bot API.
 
 <% i18n.raycord = "Raycord Legends" %>
 <% i18n.raycordDesc = `
-MLP-пародия на игру Rayman Legends.
+MLP & Rayman Legends кроссовер.
 ` %>
 
 <% i18n.mars2000 = "MARS 2000" %>
@@ -100,6 +100,7 @@ MLP-пародия на игру Rayman Legends.
 ` %>
 
 <%# Portfolio controls %>
+<% i18n.hidden = "(скрыто)" %>
 <% i18n.myPortfolio = "Портфолио" %>
 <% i18n.dataScience = "Анализ данных" %>
 <% i18n.nonDataScience = "Не анализ данных" %>
