--- a/src/blocks/education/index.ejs
+++ b/src/blocks/education/index.ejs
@@ -9,7 +9,11 @@
         <li class="education-item">
             <p class="education-item__text"><strong><%= i18n.technopark %></strong></p>
             <p class="education-item__additional-text"><%= i18n.technoparkSpec %></p>
-            <p class="education-item__additional-text"><a href="https://park.mail.ru/curriculum/program/main/" target="_blank">Программа</p>
+            <p class="education-item__additional-text">
+                <a href="https://park.mail.ru/curriculum/program/main/" target="_blank">Программа</a>
+                &nbsp;
+                <a href="https://github.com/frontend-park-mail-ru/2017_2_glitchless" target="_blank">Проект 1-го курса</a>
+            </p>
         </li>
         <li class="education-item">
             <p class="education-item__text">
